fixed dark mode colors

--- a/frontend/src/scss/_vars.scss
+++ b/frontend/src/scss/_vars.scss
@@ -10,6 +10,9 @@
     --main-bacKground-color: #d9dcd6;
     --scrollbar-track-background-color: #fff;
     --scrollbar-thumb-background-color: #000000d4;
+    --scrollbar-thumb-hover-background-color: #161616;
+    --title-color: #23252b;
+    --label-color: #23252b;
 
     // Home
     --register-btn-background-color: #a8dadc;
@@ -22,7 +25,9 @@
 
     // Navbar
     --navbar-box-shadow: 1px 22px 46px -26px rgba(66, 68, 90, 0.5);
+    --navbar-background-color: #fff;
     --navbar-active-border: 1px solid #1d3557;
+    --navbar-link-active: #1d3557;
 
     // PhotoCard
     --photo-card-background-color: #fff;
@@ -30,16 +35,19 @@
 
 [data-theme="dark"] {
     // General
-    --box-shadow: 3px 20px 62px -25px #000;
+    --box-shadow: 3px 20px 62px -25px #aaa8a8;
     --btn-hover-box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
     --super-admin-background-color: #e63946;
     --admin-background-color: #38a3a5;
-    --logo-background-color: gray;
+    --logo-background-color: #d9dcd6;
+    --title-color: #796e6efd;
+    --label-color: #d9dcd6;
 
     // Index
     --main-bacKground-color: #000000d4;
-    --scrollbar-track-background-color: #605858fd;
+    --scrollbar-track-background-color: #796e6efd;
     --scrollbar-thumb-background-color: #d9dcd6;
+    --scrollbar-thumb-hover-background-color: #fff;
 
     // Home
     --register-btn-background-color: #a8dadc;
@@ -48,12 +56,14 @@
     --title-text-shadow: -20px -8px 48px rgba(66, 68, 90, 1);
 
     // Modal
-    --modal-background-color: #000000d4;
+    --modal-background-color: #000000e2;
 
     // Navbar
-    --navbar-box-shadow: 1px 22px 46px -26px rgba(66, 68, 90, 0.5);
-    --navbar-active-border: 1px solid #1d3557;
+    --navbar-box-shadow: 1px 22px 46px -26px #878585;
+    --navbar-background-color: #605858fd;
+    --navbar-link-active: #4283df;
+    --navbar-active-border: 1px solid #4283df;
 
     // PhotoCard
-    --photo-card-background-color: #fff;
+    --photo-card-background-color: #d9dcd6;
 }
