--- a/frontend/src/scss/components/navbar.scss
+++ b/frontend/src/scss/components/navbar.scss
@@ -3,6 +3,8 @@
 
 .nav {
     box-shadow: var(--navbar-box-shadow);
+    background-color: var(--navbar-background-color);
+    transition: background-color 0.25s ease-in-out;
 }
 
 .navbar-brand {
@@ -56,7 +58,7 @@ nav {
     }
 
     .navbar-nav .nav-item .nav-link.active {
-        color: #1d3557;
+        color: var(--navbar-link-active);
         border-bottom: var(--navbar-active-border);
     }
 }
