--- a/frontend/src/scss/pages/home.scss
+++ b/frontend/src/scss/pages/home.scss
@@ -38,7 +38,7 @@
     }
 }
 
-.title {
+.shdw {
     text-shadow: var(--title-text-shadow);
 }
 
